# Hashmancer

./: .env.example  .env.integration.template  .flake8  .gitignore  AI_STRATEGY_ENGINE_DESIGN.md  AUTO-START-README.md  AUTONOMOUS_DEVELOPMENT_ROADMAP.md  CMakeLists.txt  DEPLOYMENT_SUCCESS_SUMMARY.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_ENVIRONMENT.md  DEVELOPMENT_ISSUES_TRACKER.md  DIGITALOCEAN_SETUP.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_MANUAL.md  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.cli-installer  Dockerfile.development  Dockerfile.gpu  Dockerfile.production  Dockerfile.server  Dockerfile.worker  EXECUTIVE_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_DEPLOYMENT_COMPLETE.md  IMMEDIATE_IMPACT_IMPROVEMENTS.md  IMPROVEMENT_ROADMAP.md  INSTALLATION.md  INTEGRATION_TESTS_GUIDE.md  LICENSE  MANIFEST.in  OPUS_INTEGRATION_WORKFLOW.md  README-INSTALLATION.md  README.md  REDIS_IMPROVEMENTS.md  ROADMAP.md  UBIQUITI_VPN_SETUP.md  VAST_AI_GPU_SETUP.md  VAST_AI_SETUP.md  (+49 more)
.claude/: settings.local.json
.github/workflows/: gpu-tests.yml  integration-tests.yml  python-tests.yml
Server/: README.md  __init__.py  admin.html  auth_utils.py  convert_patterns.py  event_logger.py  flash_presets.json  glyph.html  hashescom_client.py  learn_trends.py  login.html  main.py  orchestrator_agent.py  pattern_stats.py  pattern_to_mask.py  pattern_utils.py  portal.html  redis_manager.py  redis_utils.py  requirements.txt  restore_manager.py  setup.py  signing_utils.py  train_llm.py  waifus.py  wordlist_db.py
Server/app/: app.py  config.py
Worker/: Dockerfile  README.md  REQUIREMENTS.md
Worker/hashmancer_worker/: bios_flasher.py  crypto_utils.py  gpu_sidecar.py  worker_agent.py
config/: nginx.conf  redis.conf
darkling/: CMakeLists.test.txt  CMakeLists.txt  GPU_TEST_README.md  README.md  RULE_MANAGEMENT_SUMMARY.md  backend_dispatcher.cpp  charsets.py  darkling_engine.cu  darkling_engine.h  darkling_host.cpp  gpu_backend.cpp  gpu_backend.h  gpu_shared_types.h  gpu_test_suite.sh  statistics.py
darkling/configs/: darkling.toml  ruleset_baked256.json
darkling/cuda_backend/: cuda_cracker.cu  cuda_cracker.h
darkling/hip_backend/: darkling_engine.hip  hip_cracker.cpp  hip_cracker.h
darkling/include/: checkpoint_manager.h  darkling_device_queue.h  darkling_dict.h  darkling_mask_engine.h  darkling_rule_manager.h  darkling_rules.h  darkling_telemetry.h  gpu_manager.h  rule_analytics.h
darkling/intel_backend/: intel_cracker.cpp  intel_cracker.h  opencl_kernel.cl
darkling/rules/: best64.rule
darkling/rules/ptx/: rule_CASE_TOGGLE_SIMD.ptx  rule_LEET_LOOKUP_OPTIMIZED.ptx  rule_PREFIX_1.ptx  rule_SUFFIX_D4.ptx  rule_VECTORIZED_COPY.ptx
darkling/src/: device_queue.cu  dict_kernel_dispatch.cu  dict_loader.cpp  gpu_manager.cu  hash_primitives.cuh  hashcat_rule_parser.cpp  hybrid_attack_engine.cu  kernel_optimizations.cuh  leet_lut.cu  main.cu  main_demo.cu  markov_chain_engine.cu  mask_engine.cu  pinned_ringbuffer.cpp  ptx_performance_monitor.cuh  ptx_rule_compiler.cpp  rule_dispatch.cu  rule_manager.cu  rule_table.cu  rule_upload_handler.cpp  smart_rule_engine.cu  wordlist_optimizer.cu
darkling/tests/: test_cli.py  test_cli_integration.cpp  test_kernel.cu  test_loader.cpp  test_performance_suite.cpp  test_rule_manager.cpp  test_rule_upload.cpp  test_rules.cpp
darkling/tools/: gen_shard.cpp  verify_hits.cpp
deploy/cloud-init/: hashmancer.yaml
docker/: Dockerfile.worker
docker-scripts/: quick-deploy.sh
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/server/: Dockerfile  health-check.sh  start-server.sh
docker/worker/: Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.simple  README.md  gpu-health-check.sh  gpu-utils.py  health-check.sh  start-worker.sh
hashmancer/: __init__.py  ascii_logo.py  hash_algos.py
hashmancer/cli/: __init__.py  darkling_cli.py  hashes_cli.py  main.py  server_cli.py  sshkey_cli.py  worker_cli.py
hashmancer/darkling/: CMakeLists.txt  README.md  __init__.py  backend_dispatcher.cpp  backends.py  charsets.py  darkling_engine.cu  darkling_engine.h  darkling_host.cpp  gpu_backend.cpp  gpu_backend.h  gpu_helpers.py  gpu_shared_types.h  launcher.py  statistics.py
hashmancer/darkling/cuda_backend/: cuda_cracker.cu  cuda_cracker.h
hashmancer/darkling/hip_backend/: darkling_engine.hip  hip_cracker.cpp  hip_cracker.h
hashmancer/darkling/intel_backend/: intel_cracker.cpp  intel_cracker.h  opencl_kernel.cl
hashmancer/frontend/: README.md  package.json  tailwind.config.js  vite.config.ts
redis/: __init__.py
requests/: __init__.py
scripts/: backup-startup.sh  build-and-push-docker.sh  host-setup-script.py  install_all.sh  manage-server.sh  monitor-hashmancer.sh  opus-client.py  opus-integration-starter.py  pre-start-check.sh  restart-hashmancer.sh  setup-digitalocean-server.sh  start-hashmancer.sh  status-hashmancer.sh  stop-hashmancer.sh  validate-setup.sh  vast-deploy-prebuilt.sh  vast-worker-setup.sh  vast-worker-simple.sh  verify_gpu_setup.py  worker_entrypoint.sh
server/: cli_commands.py  deployment_config.py  vast_ai_manager.py  worker_portal.py
tests/: conftest.py  test_allowed_origins.py  test_auth_middleware.py  test_backends.py  test_batch_status.py  test_charsets.py  test_darkling_backends.py  test_dispatch_loop.py  test_event_logger.py  test_flash_queue.py  test_flash_settings.py  test_flash_tuner.py  test_github_client.py  test_gpu_flasher.py  test_gpu_sidecar.py  test_hash_algos.py  test_hashes_config.py  test_hashes_poll.py  test_hashes_settings.py  test_hashescom_client.py  test_helpers.py  test_http_utils.py  test_import_hashes.py  test_language_patterns.py  test_llm_orchestrator.py  test_orchestrator_agent.py  test_pattern_to_mask.py  test_pattern_utils.py  test_prebuilt_download.py  test_predefined_masks.py  test_process_hashes_jobs.py  test_redis_manager.py  test_server_filepaths.py  test_server_found_map.py  test_server_get_batch.py  test_server_hash_batches.py  test_server_import_hash.py  test_server_import_hashes.py  test_server_llm.py  test_server_markov.py  (+15 more)
utils/: __init__.py
(+133 files in other folders)
