[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hashmancer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "redis>=7.0.8",
    "requests==2.32.4",
    "pydantic==2.11.7",
    "cryptography==45.0.5",
    "python-multipart==0.0.20",
    "psutil==7.0.0",
    "filelock==3.18.0",
    "argon2-cffi==25.1.0",
    "click>=8.0.0",
]

[project.scripts]
hashmancer = "hashmancer.cli.main:cli"
hashmancer-server = "hashmancer.server.__main__:main"
hashmancer-worker = "hashmancer.worker.hashmancer_worker.worker_agent:main"

[tool.setuptools]
packages = ["hashmancer", "hashmancer.cli", "hashmancer.server", "hashmancer.worker", "hashmancer.darkling", "hashmancer.utils"]

[tool.setuptools.package-data]
"hashmancer.server" = [
    "*.html",
    "app/**/*",
]

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as requiring asyncio",
]
